[project]
name = "pyCTF"
version = "0.0.1"
authors = [
  { name="Benjamin L Weare", email="benjamin.weare1@nottingham.ac.uk" },
]
description = "Python for CTF measurement"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

#[project.urls]
#Homepage = "https://github.com/pypa/sampleproject"
#Issues = "https://github.com/pypa/sampleproject/issues"
#[build-system]
#[depedancies]
# numpy, lmfit, scipy