[project]
name = "pyCTF"
version = "0.0.1"
authors = [
  { name="Benjamin L Weare", email="benjamin.weare1@nottingham.ac.uk" },
]
description = "Python for CTF measurement"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

keywords = ["CTF", "TEM", "diffraction", "microscopy","electron microscopy"]


classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization"]

depedancies = [
  "numpy>2.3.1",
  "lmfit>1.3.4",
  "scipy>1.15.3",
  "matplotlib>3.10",
  "skikit-image>0.25.2",
  "pillow>11.1.0"]

[project.urls]
  repository = "https://github.com/benweare/pyCTF"